# UDP2DMX-ESP32

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  MIGRATION.md  README.md  README2.md  partitions.csv  readme.md  sdkconfig.back  sdkconfig.default  sdkconfig.old  temp_working_main.c  testudp.ipynb  todo.md
components/config_handler/: CMakeLists.txt  config_handler.c
components/config_handler/include/: config_handler.h
components/my_config/: CMakeLists.txt  my_config.c
components/my_config/include/: my_config.h
components/my_led/: CMakeLists.txt  my_led.c
components/my_led/include/: my_led.h
components/my_wifi/: CMakeLists.txt  Kconfig  my_wifi.c
components/my_wifi/include/: my_wifi.h
components/spiffs_image/: CMakeLists.txt
components/spiffs_image/spiffs/: config.json
components/wifi/: Kconfig
main/: CMakeLists.txt  Chatgpt.md  Kconfig.projbuild  chatgpt code.c  idf_component.yml  main mit switch (muss noch umgebaut werden).c  main-1channel-working.c  main.c  readme.md  testudp.ipynb
main/include/: dmx_manager.h  system_config.h  udp_protocol.h  udp_server.h
main/src/: dmx_manager.c  main.c  system_config.c  udp_protocol.c  udp_server.c
